style: fix builds list gap

--- a/src/css/builds.css
+++ b/src/css/builds.css
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 240px;
+  gap: 100px;
   width: 100%;
   margin-bottom: 100px;
 }
@@ -159,11 +159,17 @@
   fill: #0a0f13;
 }
 
-@media screen and (max-width:1920px) {
+@media screen and (min-width:1440px) and (max-width:1919px) {
+  .builds-cards-list {
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width:1920px) {
   .builds-cards-list {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 100px;
+    gap: 240px;
   }
 }
